# Object-Serialization

./: CMakeLists.txt  Int.xml  Makefile  README.md  binary_serialization.cpp  binary_serialization.h  convert_to_char.cpp  convert_to_char.h  example.xml  main.cpp  merge.h  n.data  test.xml  test2.xml  udt.data  xml_deserialization.cpp  xml_deserialization.h  xml_serialization.cpp  xml_serialization.h
